# snap-performance

./: README.md  bench.bash  bench.sh  package.json  tsconfig.json
.github/workflows/: build-test.yml
manta-rs/: .gitattributes
results/: BENCHMARK.md
rust-perf/: Cargo.toml  README.md  build-wasm.mjs
rust-perf/scripts/: build-bundler.sh  build-snap.sh  build-web.sh  build.sh  test.sh
rust-perf/src/: lib.rs
