[package]
name = "rust-perf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"
wasm-bindgen-test = "0.3.32"
console_error_panic_hook = "0.1.7"
sha3 = "0.10.4"
js-sys = "0.3.9"
ark-ec = "0.3.0"
manta-pay = {path = "../manta-rs/manta-pay", features = ["groth16", "test"]}
manta-accounting = {path = "../manta-rs/manta-accounting",version ="*" }
manta-benchmark = {path = "../manta-rs/manta-benchmark", version ="*"}
manta-parameters = {path = "../manta-rs/manta-parameters", version ="*"}
manta-trusted-setup = {path = "../manta-rs/manta-trusted-setup", version ="*"}
manta-util = {path = "../manta-rs/manta-util", version ="*"}