[package]
name = "rust-perf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"
wasm-bindgen-test = "0.3.32"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.9"
ark-ec = "0.3.0"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.5" }
ark-bls12-377 = "0.3.0"
ark-ff = "0.3.0"
ark-bls12-381 = "0.3.0"
